--- a/ETL-Project.ipynb
+++ b/ETL-Project.ipynb
@@ -101,7 +101,10 @@
     "\n",
     "querystring = {\"hero\":\"spiderman\"}\n",
     "\n",
-    "\n",
+    "headers = {\n",
+    "    'x-rapidapi-host': \"superhero-search.p.rapidapi.com\",\n",
+    "    'x-rapidapi-key': secret key\n",
+    "    }\n",
     "\n",
     "response = requests.request(\"GET\", url, headers=headers, params=querystring)\n",
     "\n",
